tests/compile-fail/integration__integration__general__const_void.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: void-typed variable
   ┌─ <input>:26:15
   │
26 │         const void x = delete();
   │               ^^^^ variables must have a value


